Fixed z-index for header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,7 @@
     width: 100%; 
     display: flex;
     flex-direction: row;
+    z-index: 11;
   }
 .header-spacer
 {
