--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -2,12 +2,10 @@
 {
     margin:0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .main {
-    /* margin-top: 96px; */
-    /* margin-left: 320px; */
-    font-size: 28px; 
     padding: 0px 10px;
     background-color: black;
     width: 100%;
@@ -59,10 +57,37 @@
 {
     width: 100%;
     position: absolute;
-    /* height: 100%; */
 }
-
 .main h2
 {
     color: white;
+}
+
+.chip-bar
+{
+    
+    height: 90px;
+    border: 1px solid blue;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+.chip 
+{
+    height: 39px;
+    border-radius: 10px;
+    background-color: brown;
+    color: white;
+    font-size: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border: 1px solid white;
+    font-family: unset;
+    cursor: pointer;
+    margin-right: 30px;
+    flex-shrink: 0;
 }
